--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,12 +9,12 @@
           <%= link_to('New Post', new_post_path)%>
         </li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      <%= form_tag(posts_path, :method => "get", id: "search-form", class: "navbar-form navbar-right") do %>
+      <div class="form-group">
+        <%= text_field_tag :search, params[:search], placeholder: "Search Posts", class: "form-control" %>
+        <%= submit_tag "Search", class: "btn btn-default" %>
+      </div>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
