--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,8 +12,10 @@
     </ul>
   </div>
 </div>
+
 <div class="container text-center">
   <div class="col-sm-10 col-sm-offset-1 col-xs-12 blog-content">
+    <p id="notice"><%= notice %></p>
     <% @posts.each_with_index do |post, index| %>
       <% rowfinder = index % 2 %>
       <div class="row">
